--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 server.port=8081
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+
+## Enabling h2 console
+spring.h2.console.enabled=true
+
+## Custom h2 Console URL
+spring.h2.console.path=/h2
+#
+## temporary data storage
+spring.datasource.name=testdb
+spring.datasource.url=jdbc:h2:~/testdb/greetingapp
